--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -1,7 +1,6 @@
-name: Greeting on variable day
+name: Conditional env variable
 
-on:
-  workflow_dispatch
+on: workflow_dispatch
 
 env:
   DAY_OF_WEEK: Monday
@@ -13,6 +12,7 @@ jobs:
       Greeting: Hello
     steps:
       - name: "Say Hello Mona it's Monday"
+        if: ${{ env.DAY_OF_WEEK == 'Monday' }}
         run: echo "$Greeting $First_Name. Today is $DAY_OF_WEEK!"
         env:
           First_Name: Mona
