--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -3,7 +3,7 @@ name: Conditional env variable
 on: workflow_dispatch
 
 env:
-  DAY_OF_WEEK: Monday
+  DAY_OF_WEEK: Monday2
 
 jobs:
   greeting_job:
