--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -1,7 +1,7 @@
 on:
   workflow_dispatch:
 env:
-  # Setting an environment variable with the value of a configuration variable
+  # Setting an environment variable with the value of a configuration variable ok
   env_var: ${{ vars.ENV_CONTEXT_VAR }}
 
 jobs:
