--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow that is manually triggered
 
-# Display name of workflow
+# Display name of workflow ok
 name: Basic Workflow
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI or API.
